add first test and config tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skipdist = True
 
 [testenv]
 deps = 
-pytest
-pytest-cov
+    pygame
+    pytest
+    pytest-cov
 commands = pytest --cov=TicTacToe --cov-report=xml --cov-config=tox.ini --cov-branch
